@@ -48,6 +48,7 @@ fixed bugs:
 - fixed bug in nlp diving heuristic for fractional variables with values slightly outside of their domain
 - set lpsolstat to SCIP_LPSOLSTAT_NOTSOLVED in SCIPchg{Lp,Dual}feastol
 - use tighter dual feasibility tolerance for LPs solved during optimization-based bound tightening
+- fixed bug with LP not being flushed after bound changes on columns that are not in the LPI
 
 performance improvements:
 - also copying active tight cuts from the delayed cut pool when calling SCIPcopyCuts()
